@@ -1,3 +1,13 @@
+2001-03-21  Bruno Haible  <haible@clisp.cons.org>
+
+	Make --without-unicode work again.
+	* error.d (write_errorasciz_substring): Fix typo.
+	* init.lisp: Load "spanish" only if UNICODE.
+	* makemake.in (LPARTS): Add "spanish" only if UNICODE is enabled.
+	* type.lisp (charset-subtypep): Avoid warning.
+	* stream.d (test_external_format_arg) [!UNICODE]: Accept and ignore
+	any symbols in the CHARSET package.
+
 2001-03-20  Bruno Haible  <haible@clisp.cons.org>
 
 	* configure: Add trailing slash to www.lisp.org URL.
